Change product images to WEBP format
Updated product images from PNG to WEBP format for better performance.

--- a/homepowerpty.com/index.html
+++ b/homepowerpty.com/index.html
@@ -148,151 +148,151 @@
             <article class="products_container">
                 <ul class="products">
                     <li class="product" data-category="iron">
-                        <img src="media/images/products/plancha1.png" alt="" class="product_img">
+                        <img src="media/images/products/plancha1.webp" alt="" class="product_img">
                         <h2 class="product_name">Plancha a vapor</h2>
                         <p class="product_description">110V - 1200W | BLANCO/AZUL</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="iron">
-                        <img src="media/images/products/plancha2.png" alt="" class="product_img">
+                        <img src="media/images/products/plancha2.webp" alt="" class="product_img">
                         <h2 class="product_name">Plancha a vapor</h2>
                         <p class="product_description">1400W - 170ML | BLANCO/AZUL</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="iron">
-                        <img src="media/images/products/plancha3.png" alt="" class="product_img">
+                        <img src="media/images/products/plancha3.webp" alt="" class="product_img">
                         <h2 class="product_name">Plancha en seco</h2>
                         <p class="product_description">110V - 1200W | BLANCO/MORADO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="iron">
-                        <img src="media/images/products/plancha4.png" alt="" class="product_img">
+                        <img src="media/images/products/plancha4.webp" alt="" class="product_img">
                         <h2 class="product_name">Plancha en seco</h2>
                         <p class="product_description">110V - 1200W | BLANCO/AZUL</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_vidrio_negro.png" alt="" class="product_img">
+                        <img src="media/images/products/licuadora_vidrio_negro.webp" alt="" class="product_img">
                         <h2 class="product_name">Licuadora</h2>
                         <p class="product_description">JARRA DE VIDRIO | 110V - 1,5L NEGRO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_vidrio_blanco.png" alt="" class="product_img">
+                        <img src="media/images/products/licuadora_vidrio_blanco.webp" alt="" class="product_img">
                         <h2 class="product_name">Licuadora</h2>
                         <p class="product_description">JARRA DE VIDRIO | 110V - 1,5L BLANCO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_plastico_negro.png" alt="" class="product_img">
+                        <img src="media/images/products/licuadora_plastico_negro.webp" alt="" class="product_img">
                         <h2 class="product_name">Licuadora 2 en 1 (con molinillo)</h2>
                         <p class="product_description">JARRA DE PLASTICO | 110V - 1,5L NEGRO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_plastico_verde.png" alt="" class="product_img">
+                        <img src="media/images/products/licuadora_plastico_verde.webp" alt="" class="product_img">
                         <h2 class="product_name">Licuadora 2 en 1 (con molinillo)</h2>
                         <p class="product_description">JARRA DE PLASTICO | 110V - 1,5L VERDE</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_plastico_blanco.png" alt="" class="product_img">
+                        <img src="media/images/products/licuadora_plastico_blanco.webp" alt="" class="product_img">
                         <h2 class="product_name">Licuadora 2 en 1 (con molinillo)</h2>
                         <p class="product_description">JARRA DE PLASTICO | 110V - 1,5L BLANCO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora_plastico_rojo.png" alt="" class="product_img">
+                        <img src="media/images/products/licuadora_plastico_rojo.webp" alt="" class="product_img">
                         <h2 class="product_name">Licuadora 2 en 1 (con molinillo)</h2>
                         <p class="product_description">JARRA DE PLASTICO | 110V - 1,5L ROJO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora2_plastico_verde.png" alt="" class="product_img">
+                        <img src="media/images/products/licuadora2_plastico_verde.webp" alt="" class="product_img">
                         <h2 class="product_name">Licuadora 2 en 1 (con molinillo)</h2>
                         <p class="product_description">JARRA PLASTICA | 110V - 1,5L | VERDE</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="blender">
-                        <img src="media/images/products/licuadora2_plastico_marron.png" alt="" class="product_img">
+                        <img src="media/images/products/licuadora2_plastico_marron.webp" alt="" class="product_img">
                         <h2 class="product_name">Licuadora 2 en 1 (con molinillo)</h2>
                         <p class="product_description">JARRA PLASTICA | 110V - 1,5L | MARRÓN</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="toaster">
-                        <img src="media/images/products/tostadora.png" alt="" class="product_img">
+                        <img src="media/images/products/tostadora.webp" alt="" class="product_img">
                         <h2 class="product_name">Tostadora</h2>
                         <p class="product_description">110V - 650W | NEGRO/PLATEADO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="sandwich_maker">
-                        <img src="media/images/products/sandwhichera1.png" alt="" class="product_img">
+                        <img src="media/images/products/sandwhichera1.webp" alt="" class="product_img">
                         <h2 class="product_name">Sandwichera</h2>
                         <p class="product_description">110V - 850W | NEGRO/PLATEADO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="sandwich_maker">
-                        <img src="media/images/products/snadwichera2.png" alt="" class="product_img">
+                        <img src="media/images/products/snadwichera2.webp" alt="" class="product_img">
                         <h2 class="product_name">Sandwichera</h2>
                         <p class="product_description">110V - 850W | NEGRO/PLATEADO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="teapot">
-                        <img src="media/images/products/tetera1.png" alt="" class="product_img">
+                        <img src="media/images/products/tetera1.webp" alt="" class="product_img">
                         <h2 class="product_name">Tetera electrica</h2>
                         <p class="product_description">110V - 2L | NEGRO/PLATEADO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="teapot">
-                        <img src="media/images/products/tetera2.png" alt="" class="product_img">
+                        <img src="media/images/products/tetera2.webp" alt="" class="product_img">
                         <h2 class="product_name">Tetera electrica</h2>
                         <p class="product_description">110V - 2,3L | NEGRO/PLATEADO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="stove">
-                        <img src="media/images/products/estufa_individual_negro.png" alt="" class="product_img">
+                        <img src="media/images/products/estufa_individual_negro.webp" alt="" class="product_img">
                         <h2 class="product_name">Estufa un quemador</h2>
                         <p class="product_description">110V - 1000W | NEGRO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="stove">
-                        <img src="media/images/products/estufa_individual_blanco.png" alt="" class="product_img">
+                        <img src="media/images/products/estufa_individual_blanco.webp" alt="" class="product_img">
                         <h2 class="product_name">Estufa un quemador</h2>
                         <p class="product_description">110V - 1000W | BLANCO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="stove">
-                        <img src="media/images/products/estufa_doble_negro.png" alt="" class="product_img">
+                        <img src="media/images/products/estufa_doble_negro.webp" alt="" class="product_img">
                         <h2 class="product_name">Estufa dos quemadores</h2>
                         <p class="product_description">110V - 2000W | NEGRO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="stove">
-                        <img src="media/images/products/estufa_doble_blanco.png" alt="" class="product_img">
+                        <img src="media/images/products/estufa_doble_blanco.webp" alt="" class="product_img">
                         <h2 class="product_name">Estufa dos quemadores</h2>
                         <p class="product_description">110V - 2000W | BLANCO</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="air_fryer">
-                        <img src="media/images/products/airfryer.png" alt="" class="product_img">
+                        <img src="media/images/products/airfryer.webp" alt="" class="product_img">
                         <h2 class="product_name">Air fryer</h2>
                         <p class="product_description">NEGRO | 110V - 4,5L</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="coffe_pot">
-                        <img src="media/images/products/cafetera2_negro.png" alt="" class="product_img">
+                        <img src="media/images/products/cafetera2_negro.webp" alt="" class="product_img">
                         <h2 class="product_name">Cafetera</h2>
                         <p class="product_description">NEGRO | 110V - 1,2L</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="coffe_pot">
-                        <img src="media/images/products/cafetera3_negro.png" alt="" class="product_img">
+                        <img src="media/images/products/cafetera3_negro.webp" alt="" class="product_img">
                         <h2 class="product_name">Cafetera</h2>
                         <p class="product_description">NEGRO | 110V - 6 TAZAS</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
                     </li>
                     <li class="product" data-category="coffe_pot">
-                        <img src="media/images/products/cafetera1_negro.png" alt="" class="product_img">
+                        <img src="media/images/products/cafetera1_negro.webp" alt="" class="product_img">
                         <h2 class="product_name">Cafetera</h2>
                         <p class="product_description">NEGRO | 110V - 6 TAZAS</p>
                         <a href="https://wa.me/+50769838322" class="product_btn">Consultar Stock</a>
