intento de optimizacion de imagenes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="shortcut icon" href="/media/icons/logo/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="media/icons/logo/logo.png" type="image/x-icon">
 
     <meta name="description" content="Stock exclusivo para negocios que buscan lo mejor en calidad y tecnología.">
     <meta name="keywords" content="electrodomésticos, planchas, licuadoras, tostadoras, sandwicheras, teteras, estufas eléctricas, air fryer, cafetera, Home Power PTY, Panamá">
@@ -19,7 +19,7 @@
 
     <meta property="og:title" content="Homepowerpty">
     <meta property="og:description" content="Stock exclusivo para negocios que buscan lo mejor en calidad y tecnología.">
-    <meta property="og:image" content="/media/icons/logo/logo.png">
+    <meta property="og:image" content="media/icons/logo/logo.png">
     <meta property="og:url" content="https://www.homepowerpty.com/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_ES">
@@ -30,7 +30,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Homepowerpty">
     <meta name="twitter:description" content="Stock exclusivo para negocios que buscan lo mejor en calidad y tecnología.">
-    <meta name="twitter:image" content="/media/icons/logo/logo.png">
+    <meta name="twitter:image" content="media/icons/logo/logo.png">
     <meta name="theme-color" content="#FF9F1C">
 
     <link rel="apple-touch-icon" sizes="57x57" href="media/icons/favicon/favicon-57x57.png" type="image/png" />
@@ -575,8 +575,8 @@
 
             <li class="product" data-category="stove">
                 <div class="product_image_wrapper">
-                    <img src="/media/images/products/ESTUFA GAS TRES_.webp" 
-                        data-box="media/images/products/ESTUFA GAS DOS.webp" 
+                    <img src="media/images/products/ESTUFA GAS DOS.webp" 
+                        data-box="media/images/products/ESTUFA GAS DOS CAJA.webp"
                         alt="Estufa a Gas 2 Quemadores" class="product_img" loading="lazy">
                 </div>
                 <div class="product_content">
@@ -626,8 +626,8 @@
 
             <li class="product" data-category="air_fryer">
                 <div class="product_image_wrapper">
-                    <img src="/media/images/products/FREIDORA DE AIRE NEGRA 2.webp" 
-                        data-box="/media/images/products/FREIDORA DE AIRE NEGRA 2 CAJA.webp" 
+                    <img src="media/images/products/FREIDORA DE AIRE NEGRA 2.webp" 
+                        data-box="media/images/products/FREIDORA DE AIRE NEGRA 2 CAJA.webp"
                         alt="Freidora de Aire Negra" class="product_img" loading="lazy">
                 </div>
                 <div class="product_content">
@@ -885,8 +885,8 @@
             <li class="product" data-category="pressure_cooker">
                 <div class="product_badge hot">Más Vendido</div>
                 <div class="product_image_wrapper">
-                    <img src="/media/images/products/OLLA PRESION.webp" 
-                         data-box="/media/images/products/OLLA PRESION CAJA.webp" 
+                    <img src="media/images/products/OLLA PRESION.webp" 
+                         data-box="media/images/products/OLLA PRESION CAJA.webp"
                          alt="Olla de Presión Premium" class="product_img" loading="lazy">
                 </div>
                 <div class="product_content">
@@ -1246,7 +1246,7 @@
             <div class="section_testimonial_container">
                 <div class="testimonial">
                     <div class="testimonial_avatar">
-                        <img src="/media/images/avatar/Maria G.png" alt="Avatar María G." class="avatar_img" loading="lazy">
+                        <img src="media/images/avatar/Maria G.png" alt="Avatar María G." class="avatar_img" loading="lazy">
                     </div>
                     <p class="testimonial_text">"Excelente servicio y productos de alta calidad. Mis clientes están
                         encantados con las planchas y licuadoras que adquirí. ¡Definitivamente volveré a comprar!"</p>
@@ -1254,7 +1254,7 @@
                 </div>
                 <div class="testimonial">
                     <div class="testimonial_avatar">
-                        <img src="/media/images/avatar/Carlos R.png" alt="Avatar Carlos R." class="avatar_img" loading="lazy">
+                        <img src="media/images/avatar/Carlos R.png" alt="Avatar Carlos R." class="avatar_img" loading="lazy">
                     </div>
                     <p class="testimonial_text">"La atención al cliente es excepcional. Me ayudaron a elegir los
                         electrodomésticos perfectos para mi negocio y el proceso de compra fue rápido y sencillo."</p>
@@ -1262,7 +1262,7 @@
                 </div>
                 <div class="testimonial">
                     <div class="testimonial_avatar">
-                        <img src="/media/images/avatar/Ana L.png" alt="Avatar Ana L." class="avatar_img" loading="lazy">
+                        <img src="media/images/avatar/Ana L.png" alt="Avatar Ana L." class="avatar_img" loading="lazy">
                     </div>
                     <p class="testimonial_text">"Los precios son muy competitivos y la calidad de los productos es
                         insuperable. Mis clientes siempre me preguntan dónde consigo estos electrodomésticos tan
