cambio de prueba en producto plancha seco

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <li class="product" data-category="iron">
                 <div class="product_badge hot">Más Vendido</div>
                 <div class="product_image_wrapper">
-                    <img src="media/images/products/PLANCHA SECO 2_.webp"
+                    <img src="media/images/products/PLANCHA SECO 2_.png"
                         data-box="media/images/products/PLANCHA SECO CAJA.webp"
                         alt="Plancha Seco" class="product_img" loading="lazy">
                 </div>
@@ -1190,7 +1190,6 @@
             }
         }
         </style>
-    </style>
 </head>
 <body>
     <section class="section_about_us" id="nosotros">
