cambio de nombres en archivos de producto

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <li class="product" data-category="iron">
                 <div class="product_badge hot">Más Vendido</div>
                 <div class="product_image_wrapper">
-                    <img src="media/images/products/PLANCHA SECO 2_.png"
+                    <img src="media/images/products/PLANCHA_SECO_2.png"
                         data-box="media/images/products/PLANCHA SECO CAJA.webp"
                         alt="Plancha Seco" class="product_img" loading="lazy">
                 </div>
@@ -1245,7 +1245,7 @@
             <div class="section_testimonial_container">
                 <div class="testimonial">
                     <div class="testimonial_avatar">
-                        <img src="media/images/avatar/Maria G.png" alt="Avatar María G." class="avatar_img" loading="lazy">
+                        <img src="media/images/avatar/Maria_G.png" alt="Avatar María G." class="avatar_img" loading="lazy">
                     </div>
                     <p class="testimonial_text">"Excelente servicio y productos de alta calidad. Mis clientes están
                         encantados con las planchas y licuadoras que adquirí. ¡Definitivamente volveré a comprar!"</p>
@@ -1253,7 +1253,7 @@
                 </div>
                 <div class="testimonial">
                     <div class="testimonial_avatar">
-                        <img src="media/images/avatar/Carlos R.png" alt="Avatar Carlos R." class="avatar_img" loading="lazy">
+                        <img src="media/images/avatar/Carlos_R.png" alt="Avatar Carlos R." class="avatar_img" loading="lazy">
                     </div>
                     <p class="testimonial_text">"La atención al cliente es excepcional. Me ayudaron a elegir los
                         electrodomésticos perfectos para mi negocio y el proceso de compra fue rápido y sencillo."</p>
@@ -1261,7 +1261,7 @@
                 </div>
                 <div class="testimonial">
                     <div class="testimonial_avatar">
-                        <img src="media/images/avatar/Ana L.png" alt="Avatar Ana L." class="avatar_img" loading="lazy">
+                        <img src="media/images/avatar/Ana_L.png" alt="Avatar Ana L." class="avatar_img" loading="lazy">
                     </div>
                     <p class="testimonial_text">"Los precios son muy competitivos y la calidad de los productos es
                         insuperable. Mis clientes siempre me preguntan dónde consigo estos electrodomésticos tan
