--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1552,7 +1552,9 @@
     <script src="scripts/send_careers_form.js"></script>
     <script src="scripts/product-interactions.js"></script>
     <script src="scripts/avatar_effects.js"></script>
+    <script src="scripts/image-optimization.js"></script>
     <script src="scripts/black_week_popup.js"></script>
     <script src="scripts/cv_button_handler.js"></script>
 </body>
 </html>
+
