Fix: responsive popup (transparent, no border), show internal close button; Mobile overflow fix for social header emails; Favicon fallback + UTF-8 meta; Update styles cleanup. Replace estufa gas images (3 quemadores).

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="es">
 
 <head>
-    <meta charset="UeF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="media/icons/logo/logo.png" type="image/x-icon">
+    <link rel="icon" href="media/icons/favicon/favicon-32x32.png" type="image/png">
+    <link rel="icon" sizes="any" href="/favicon.ico">
 
     <meta name="description" content="Stock exclusivo para negocios que buscan lo mejor en calidad y tecnología.">
     <meta name="keywords" content="electrodosticos, planchas, licuadoras, tostadoras, sandwicheras, teteras, estufas eléctricas, air fryer, cafetera, Home Power PeY, Panamá">
@@ -394,67 +395,31 @@
                 </div>
             </li>
 
-            <li class="product" data-category="rice_cooker">
-                <div class="product_badge popular">Popular</div>
-                <div class="product_image_wrapper">
-                    <picture>
-                        <!-- Imagen principal -->
-                        <source
-                            srcset="media/images/products/ARROCERA_VAPOR-400.webp 400w,
-                                    media/images/products/ARROCERA_VAPOR-800.webp 800w,
-                                    media/images/products/ARROCERA_VAPOR.webp 1200w"
-                            type="image/webp">
-                       <source
-                            srcset="media/images/products/ARROCERA_VAPOR-400.jpg 400w,
-                                    media/images/products/ARROCERA_VAPOR-800.jpg 800w,
-                                    media/images/products/ARROCERA_VAPOR.jpg 1200w"
-                            type="image/jpeg">
-                        <!-- Imagen de caja (para hover) -->
-                        <source
-                            srcset="media/images/products/ARROCERA_VAPOR_CAJA-400.webp 400w,
-                                    media/images/products/ARROCERA_VAPOR_CAJA-800.webp 800w,
-                                    media/images/products/ARROCERA_VAPOR_CAJA.webp 1200w"
-                            type="image/webp"
-                            data-hover>
-                        <source
-                            srcset="media/images/products/ARROCERA_VAPOR_CAJA-400.jpg 400w,
-                                    media/images/products/ARROCERA_VAPOR_CAJA-800.jpg 800w,
-                                    media/images/products/ARROCERA_VAPOR_CAJA.jpg 1200w"
-                            type="image/jpeg"
-                            data-hover>
-                        <img src="media/images/products/ARROCERA_VAPOR.jpg"
-                            data-box="media/images/products/ARROCERA_VAPOR_CAJA.jpg"
-                            alt="Arrocera con Vaporera 2.2L"
-                            class="product_img"
-                            loading="lazy"
-                            sizes="(max-width: 480px) 400px,
-                                   (max-width: 768px) 800px,
-                                   1200px">
-                    </picture>
-
-                    <img src="media/images/products/ARROCERA_VAPOR.webp" 
-                         data-box="media/images/products/ARROCERA_VAPOR_CAJA.webp" 
-                         alt="Arrocera con Vapor" class="product_img" loading="lazy">
-                </div>
-                <div class="product_content">
-                    <span class="product_sku">COD: 732129008475</span>
-                    <h3 class="product_name">Arrocera con Vaporera</h3>
-                    <ul class="product_features">
-                        <li> Capacidad: 2.2L</li>
-                        <li> Bandeja para vapor</li>
-                        <li> Apagado automático</li>
-                        <li> Incluye accesorios</li>
-                    </ul>
-                    <div class="product_actions">
-                        <span class="stock_status in_stock"> Disponible</span>
-                        <a href="https://wa.me/50769838322?text=Hola, me interesa la Arrocera con Vapor COD: 732129008475" 
-                           class="product_cta" target="_blank" rel="noopener">
-                            Consultar Precio
-                        </a>.
-                    </div>
-                </div>
-            </li>
-
+<li class="product" data-category="rice_cooker">
+    <div class="product_badge hot">¡Más Vendido</div>
+    <div class="product_image_wrapper">
+        <img src="media/images/products/ARROCERA_VAPOR.webp" 
+             data-box="media/images/products/ARROCERA_VAPOR_CAJA.webp" 
+             alt="Arrocera con Vaporera" class="product_img" loading="lazy">
+    </div>
+    <div class="product_content">
+        <span class="product_sku">COD: 732129008475</span>
+        <h3 class="product_name">Arrocera con Vaporera 2.2L</h3>
+        <ul class="product_features">
+            <li> Capacidad: 2.2L</li>
+            <li> Bandeja para vapor</li>
+            <li> Apagado automático</li>
+            <li> Incluye accesorios</li>
+        </ul>
+        <div class="product_actions">
+            <span class="stock_status limited">¡Pocas unidades!</span>
+            <a href="https://wa.me/50769838322?text=Hola, me interesa la Arrocera con Vapor COD: 732129008475" 
+               class="product_cta" target="_blank" rel="noopener">
+                Consultar Precio
+            </a>
+        </div>
+    </div>
+</li>
             <!-- CAFETERAS -->
             <li class="product" data-category="coffee_maker">
                 <div class="product_image_wrapper">
@@ -688,8 +653,8 @@
             <li class="product" data-category="oven">
                 <div class="product_badge premium">Premium</div>
                 <div class="product_image_wrapper">
-                    <img src="media/images/products/HORNIO.webp" 
-                         data-box="media/images/products/HORNIO_CAJA.webp" 
+                    <img src="media/images/products/HORNITO.webp" 
+                         data-box="media/images/products/HORNITO_CAJA.webp" 
                          alt="Hornito Eléctrico" class="product_img" loading="lazy">
                 </div>
                 <div class="product_content">
@@ -791,8 +756,8 @@
             <!-- SANDWICHERAS -->
             <li class="product" data-category="sandwich_maker">
                 <div class="product_image_wrapper">
-                    <img src="media/images/products/SANDWICHERA_PLASTICO.webp"
-                        data-box="media/images/products/SANDWICHERA_PLASTICO_CAJA.webp"
+                    <img src="media/images/products/SANDWCHERA_PLASTICO.webp"
+                        data-box="media/images/products/SANDWCHERA_PLASTICO_CAJA.webp"
                         alt="Sandwichera" class="product_img" loading="lazy">
                 </div>
                 <div class="product_content">
@@ -1282,7 +1247,7 @@
 </div>
         </section>
         <section>
-            <h2 class="section_testimonial_title" id="testimonio">eestimonios</h2>
+            <h2 class="section_testimonial_title" id="testimonio">Testimonios</h2>
             <div class="section_testimonial_container">
                 <div class="testimonial">
                     <div class="testimonial_avatar">
@@ -1391,7 +1356,7 @@
                             <p class="form_msg" id="careers_form_msg"></p>
                         </div>
                         <div class="form_item">
-                            <input type="submit" class="form_input form_submit careers_submit" value="Enviar AplicaciÃƒÂ³n">
+                            <input type="submit" class="form_input form_submit careers_submit" value="Enviar Aplicación">
                         </div>
                     </form>
                     
